tests/NormalTests/paczka1/fuzzy1/68072620.err
Error in line 9: KfC S281 386,8
Error in line 8: jctReV3j S529 92,3
Error in line 6: iNEcGN A799 36,6
Error in line 23: KfC S944 18,5
Error in line 33: iNEcGN S944 28,5
Error in line 36: jctReV3j A799 78,1
